--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   </head>
   <body>
+    <h1>Jogo do pong</h1>
     <main>
-      <h1>jogo do pong</h1>
     </main>
     <script src="sketch.js"></script>
   </body>
