--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-    <h1>Jogo do pong</h1>
+    <h1>Jogo do Pong</h1>
     <main>
     </main>
     <script src="sketch.js"></script>
